--- a/docs/assets/style/style1.css
+++ b/docs/assets/style/style1.css
@@ -1,3 +1,7 @@
+body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    overflow-x: hidden;
+}
 #nav-bar{
     display: flex;
     justify-content: space-around;
@@ -11,7 +15,7 @@
     z-index: 10;
 }
 
-#nav-link{
+.nav-link{
     display: flex;
     align-items: center;
     gap: 8px;
@@ -26,7 +30,7 @@
     text-decoration: none;
 }
 
-#nav-link::after{
+.nav-link::after{
     content: "";
     position: absolute;
     bottom: -.5rem;
@@ -39,17 +43,17 @@
     border-radius: 10px;
 }
 
-#nav-link:hover::after {
+.nav-link:hover::after {
     width: 100%;
 }
 
 
 
-#nav-link.active::after{
+.nav-link.active::after{
     width: 100%;
 }
 
-#header{
+#header-1{
     display: flex;
     height: 50vh;
     width: 100%;
@@ -58,5 +62,64 @@
 }
 
 #icon{
+    border: none;
+    background: none;
     display: none;
+}
+
+#aside-1{
+    display: flex;  
+    flex-direction: column;
+    justify-content: center;
+    gap: 25px;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    transition: width 0.3s ease, left 0.3s ease;
+    backdrop-filter: blur(45px);
+    transition: transform 0.5s ease-in-out;
+    position: fixed;
+    z-index: 12;
+}
+
+#aside-1 .nav-link{
+    display: flex;
+    width: fit-content;
+    font-size: 25px;
+}
+
+#close {
+    border: none;
+    background: none;
+    font-size: 55px;
+    color: #dc3545;
+    margin-top: 20vh;
+}
+
+#aside-1.show{
+    display: flex;
+    transform: translateX(0);
+}
+
+
+@media (max-width: 768px){
+    .nav-link {display: none;}
+    .nav-link:hover:after{width: 0;}
+    #nav-bar{
+        justify-content: flex-start;
+        position: static;
+    }
+    #icon{
+        display: block;
+        font-size: 40px;
+        cursor: pointer;
+    }
+    #header-1{
+        height: 20vh;
+    }
+
+    #aside-1.show{
+        transform: translateX(100%);  /* El aside se mueve de izquierda a derecha */
+    }
 }
