--- a/docs/views/home.html
+++ b/docs/views/home.html
@@ -1,58 +1,9 @@
 <style>
-    #documentos{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
-    .contenedor{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-        padding: 20px;
-        background-color: gainsboro;
-        margin: 20px;
-        gap: 15px;
-        border-radius: 15px;
-    }
-
-    .contenedor a{
-        text-decoration: none;
-        padding: 6px 20px;
-        background-color: white;
-        border: 1px solid;
-        border-radius: 5px;
-        color: #198754;
-        font-size: 20px;
-    }
-    .contenedor h2{
-        font-size: 30px;
-    }
-    .contenedor p{
-        padding: 0 15px;
-    }
-
-    @media (max-width: 768px) {
-        #documentos{
-            grid-template-columns: 1fr;
-        }
-
-        .btn-ver{
-            display: none;
-        }
+    #home{
+        padding: 0 20px;
     }
 </style>
-<div id="documentos">
-    <div class="contenedor">
-        <h2>Diagrama de clase</h2>
-        <p>EL diagrama de clases es un tipo de diagrama de estructura estática que describe la estructura de un sistema mostrando las clases del sistema, sus atributos, operaciones (o métodos), y las relaciones entre los objetos.</p>
-        <a href="/assets/PDF/Diagrama_Clase.pdf" class="btn-ver">Ver</a>
-        <a href="/assets/PDF/Diagrama_Clase.pdf" download>Descargar PDF</a>
-        
-    </div>
-    <div class="contenedor">
-        <h2>Diagrama Entidad Relación</h2>
-        <p>Un modelo entidad-relación es una herramienta para el modelo de datos, la cual facilita la representación de entidades de una base de datos</p>
-        <a href="/assets/PDF/Diagrama_Entidad_Relacion.pdf" class="btn-ver">Ver</a>
-        <a href="/assets/PDF/Diagrama_Entidad_Relacion.pdf" download>Descargar PDF</a>
-    </div>
-</main>
+<div id="home">
+    <h1 class="text-center">Bienvenidos a la Documentación del Sistema de Comidas Rápidas</h1>
+    <p class="lead text-center">Este sistema está diseñado para facilitar el proceso de pedidos en línea y permitir a los administradores consultar estadísticas de consumo de productos.</p>
+</div>
