--- a/docs/assets/style/style1.css
+++ b/docs/assets/style/style1.css
@@ -55,10 +55,19 @@ body{
 
 #header-1{
     display: flex;
-    height: 50vh;
     width: 100%;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
+    margin: 10vh 0;
+}
+
+#header-1 h1{
+    font-weight: bold;
+    font-size: 45px;
+}
+
+#header-1 img{
+    width: 20vh;
 }
 
 #icon{
@@ -115,8 +124,10 @@ body{
         font-size: 40px;
         cursor: pointer;
     }
-    #header-1{
-        height: 20vh;
+
+    #header-1 h1{
+        font-weight: bold;
+        font-size: 35px;
     }
 
     #aside-1.show{
