--- a/docs/views/home.html
+++ b/docs/views/home.html
@@ -4,6 +4,6 @@
     }
 </style>
 <div id="home">
-    <h1 class="text-center">Bienvenidos a la Documentación del Sistema de Comidas Rápidas</h1>
-    <p class="lead text-center">Este sistema está diseñado para facilitar el proceso de pedidos en línea y permitir a los administradores consultar estadísticas de consumo de productos.</p>
+    <h1 class="text-center">Bienvenidos a la Documentación</h1>
+    <p class="lead text-center">Este sistema está diseñado para facilitar el proceso de pedidos en línea, aqui encontraras todos los documentos relacionados con el proyecto.</p>
 </div>
