fix error rutas

--- a/docs/views/docs.html
+++ b/docs/views/docs.html
@@ -45,14 +45,14 @@
     <div class="contenedor">
         <h2>Diagrama de clase</h2>
         <p>EL diagrama de clases es un tipo de diagrama de estructura estática que describe la estructura de un sistema mostrando las clases del sistema, sus atributos, operaciones (o métodos), y las relaciones entre los objetos.</p>
-        <a href="/assets/PDF/Diagrama_Clase.pdf" class="btn-ver">Ver</a>
-        <a href="/assets/PDF/Diagrama_Clase.pdf" download>Descargar PDF</a>
+        <a href="../assets/PDF/Diagrama_Clase.pdf" class="btn-ver">Ver</a>
+        <a href="../assets/PDF/Diagrama_Clase.pdf" download>Descargar PDF</a>
         
     </div>
     <div class="contenedor">
         <h2>Diagrama Entidad Relación</h2>
         <p>Un modelo entidad-relación es una herramienta para el modelo de datos, la cual facilita la representación de entidades de una base de datos</p>
-        <a href="/assets/PDF/Diagrama_Entidad_Relacion.pdf" class="btn-ver">Ver</a>
-        <a href="/assets/PDF/Diagrama_Entidad_Relacion.pdf" download>Descargar PDF</a>
+        <a href="../assets/PDF/Diagrama_Entidad_Relacion.pdf" class="btn-ver">Ver</a>
+        <a href="../assets/PDF/Diagrama_Entidad_Relacion.pdf" download>Descargar PDF</a>
     </div>
 </main>
