--- a/docs/assets/style/style1.css
+++ b/docs/assets/style/style1.css
@@ -4,7 +4,7 @@ body{
 }
 #nav-bar{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     gap: 30px;
     padding: 15px 25px;
@@ -124,13 +124,18 @@ body{
         font-size: 40px;
         cursor: pointer;
     }
-
+    #header-1{
+        padding: 0 10px;
+        gap: 20px;
+        flex-direction: column-reverse;
+        text-align: center;
+    }
     #header-1 h1{
         font-weight: bold;
-        font-size: 35px;
+        font-size: 45px;
     }
 
     #aside-1.show{
-        transform: translateX(100%);  /* El aside se mueve de izquierda a derecha */
+        transform: translateX(100%);
     }
 }
