--- a/docs/views/docs.html
+++ b/docs/views/docs.html
@@ -9,10 +9,10 @@
         justify-content: space-around;
         align-items: center;
         padding: 20px;
-        background-color: gainsboro;
         margin: 20px;
         gap: 15px;
         border-radius: 15px;
+        box-shadow: 0 5px 25px rgba(0, 0, 0, 0.4);
     }
 
     .contenedor a{
@@ -26,6 +26,7 @@
     }
     .contenedor h2{
         font-size: 30px;
+        text-align: center;
     }
     .contenedor p{
         padding: 0 15px;
@@ -44,7 +45,7 @@
 <div id="documentos">
     <div class="contenedor">
         <h2>Diagrama de clase</h2>
-        <p>EL diagrama de clases es un tipo de diagrama de estructura estática que describe la estructura de un sistema mostrando las clases del sistema, sus atributos, operaciones (o métodos), y las relaciones entre los objetos.</p>
+        <p>El diagrama de clases es un tipo de diagrama de estructura estática que describe la estructura de un sistema mostrando las clases del sistema, sus atributos, operaciones (o métodos), y las relaciones entre los objetos.</p>
         <a href="PDF/Diagrama_Clase.pdf" class="btn-ver">Ver</a>
         <a href="PDF/Diagrama_Clase.pdf" download>Descargar PDF</a>
         
