--- a/docs/views/integrantes.html
+++ b/docs/views/integrantes.html
@@ -23,15 +23,22 @@
     #apellido {  
         font-size: 20px;  
     }  
+    #redes{
+        display: flex;
+        flex-direction: row;
+    }
     #redes a {  
         color: black;  
         font-size: 35px;  
         margin: 0 7px;  
-    }  
+    }
+    .correo2{display: none;}
     @media (max-width: 767px) {  
+        .correo1{display: none;}
+        .correo2{display: block;}
         .inte {  
             flex: 0 1 100%;
-        }  
+        }
     }  
 </style>  
 <div id="cont-inte">
@@ -40,7 +47,8 @@
         <h2 id="apellido">Caballero Goenaga</h2>
         <div id="redes">
             <a href="https://github.com/JuanCaballero09" target="_blank"><i class="fa-brands fa-github"></i></a>
-            <a href="https://mail.google.com/mail/?view=cm&to=juanes0921200@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+            <a href="https://mail.google.com/mail/?view=cm&to=juanes0921200@gmail.com" target="_blank" class="correo1"><i class="fa-solid fa-envelope"></i></a>
+            <a href="mailto:juanes0921200@gmail.com" target="_blank" class="correo2"><i class="fa-solid fa-envelope"></i></a>
         </div>
     </div>
     <div class="inte">
@@ -48,7 +56,8 @@
         <h2 id="apellido">Zambrano Izaquita</h2>
         <div id="redes">
             <a href="https://github.com/San5472" target="_blank"><i class="fa-brands fa-github"></i></a>
-            <!-- <a href="#"><i class="fa-solid fa-envelope"></i></a> -->
+            <a href="https://mail.google.com/mail/?view=cm&to=santiagozambrano751@gmail.com" class="correo1"><i class="fa-solid fa-envelope"></i></a>
+            <a href="mailto:santiagozambrano751@gmail.com" class="correo2"><i class="fa-solid fa-envelope"></i></a>
         </div>
     </div>
     <div class="inte">
@@ -56,7 +65,8 @@
         <h2 id="apellido">Barrera Poveda</h2>
         <div id="redes">
             <a href="https://github.com/andrw790" target="_blank"><i class="fa-brands fa-github"></i></a>
-            <!-- <a href="#"><i class="fa-solid fa-envelope"></i></a> -->
+            <a href="https://mail.google.com/mail/?view=cm&to=andrwbarrera79@gmail.com" class="correo1"><i class="fa-solid fa-envelope"></i></a>
+            <a href="mailto:andrwbarrera79@gmail.com" class="correo2"><i class="fa-solid fa-envelope"></i></a>
         </div>
     </div>
     <div class="inte">
@@ -64,7 +74,8 @@
         <h2 id="apellido">Robles Mercado</h2>
         <div id="redes">
             <a href="https://github.com/Tribalsoft" target="_blank"><i class="fa-brands fa-github"></i></a>
-            <a href="https://mail.google.com/mail/?view=cm&to=wilrm8sena@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+            <a href="https://mail.google.com/mail/?view=cm&to=wilrm8sena@gmail.com" class="correo1"><i class="fa-solid fa-envelope"></i></a>
+            <a href="mailto:wilrm8sena@gmail.com" class="correo2"><i class="fa-solid fa-envelope"></i></a>
         </div>
     </div>
     <div class="inte">
@@ -72,7 +83,8 @@
         <h2 id="apellido">Sarabia Soto</h2>
         <div id="redes">
             <a href="https://github.com/MiguelSarabiaSoto" target="https://mail.google.com/mail/?view=cm&to=Miguelsarabia08@hotmail.com"><i class="fa-brands fa-github"></i></a>
-            <a href="#"><i class="fa-solid fa-envelope"></i></a>
+            <a href="https://mail.google.com/mail/?view=cm&to=Miguelsarabia08@hotmail.com" class="correo1"><i class="fa-solid fa-envelope"></i></a>
+            <a href="mailto:Miguelsarabia08@hotmail.com" class="correo2"><i class="fa-solid fa-envelope"></i></a>
         </div>
     </div>
 </div>
