--- a/docs/views/integrantes.html
+++ b/docs/views/integrantes.html
@@ -2,7 +2,7 @@
     #cont-inte {  
         display: flex;  
         flex-wrap: wrap;  
-        justify-content: center; /* Centra los elementos */  
+        justify-content: center; 
     }  
     .inte {  
         display: flex;  
@@ -36,6 +36,7 @@
     @media (max-width: 767px) {  
         .correo1{display: none;}
         .correo2{display: block;}
+
         .inte {  
             flex: 0 1 100%;
         }
