--- a/docs/views/docs.html
+++ b/docs/views/docs.html
@@ -55,4 +55,10 @@
         <a href="PDF/Diagrama_Entidad_Relacion.pdf" class="btn-ver">Ver</a>
         <a href="PDF/Diagrama_Entidad_Relacion.pdf" download>Descargar PDF</a>
     </div>
+    <div class="contenedor">
+        <h2>Mackup</h2>
+        <p>Un mockup web es una representación visual, no funcional, de cómo lucirá una página web en su versión final.</p>
+        <a href="PDF/macckup30-04-2025 15.36.pdf" class="btn-ver">Ver</a>
+        <a href="PDF/macckup30-04-2025 15.36.pdf" download>Descargar PDF</a>
+    </div>
 </main>
