--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,9 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+<br><br>
+<% if user_signed_in? %>
+    <h2>Bienvenido <%= current_user.nombre %></h2>
+    <p>Tu correo es: <%= current_user.email %></p>
+    <p>Tu telefono es: <%= current_user.telefono %></p>
+    <%= link_to 'cerrar sesion', destroy_user_session_path, method: :delete, data: { confirm: "¿Estas seguro?" } %>
+<% end %>
