--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,11 +1,35 @@
 header h1 {
-    color: yellow;
+    color: white;
     border: 1px solid black;
+    background-color: yellow;
     height: 100px;
     width: 2000px;
+    text-align: center;
     
     .logo{
+        height: 100px;
         width: 200px;
     }
 
+}
+nav {
+    border:1px solid black;
+    height: x;
+    width: 300px;
+}
+
+section {
+    .salchipapa{
+        border: 1px solid black;
+        height: auto;
+        width: 400px;
+
+    }
+
+    .hamburguesa{
+        border: 1px solid black;
+        height: 200px;
+        width: 400px;
+
+    }
 }
