--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
     <%= stylesheet_link_tag "home", media: "all" %>
     <header>
         <h1>La Terraza del pri</h1>
-        <%= image_tag   "Laterrazadelpri.png", class: "img-logo"%>
+        <%= image_tag "Laterrazadelpri.png", class: "img-logo"%>
     <header>
     <nav>
         <form action="buscar" method="get">
@@ -11,28 +11,35 @@
     </nav>
     <section>
         <article class="salchipapa">
-            Salchipapa
-           <button class="flecha-derecha">&#8592;</button>
-            <%= image_tag "salchipapa.png", class: "img-salchipapa"%>
+            <h4>Salchipapas</h4>
+            <div class = "item">
+                <%= image_tag "salchipapa.png", class: "img-salchipapa"%>
+                <div class="informacion" >
+                    <h3>Salchipapa Trifasica</h3>
+                    <ul>
+                            <li>Papas fritas</li>
+                            <li>Salchichas</li>
+                            <li>Queso</li>
+                            <li>Salsas</li>
+                    </ul>
+                    <p>Precio:</p>
+                    <button>Pedir</button>
+                </div>
+            </div>
             <%= image_tag "salchipapa2.png", class: "img-salchipapa2"%>
         </article>
 
         <article class="hamburguesa">
-            <p>Hamburguesas</p>
-            <form action="button" method="get">
-                <input type="button">
-            </form>
+            <h4>Hamburguesas</h4>
             <%= image_tag "Hamburgesas.png", class: "img-hamburguesas" %>
             <%= image_tag "hamburguesas2.png", class: "img-hamburguesa2" %>
         </article>
 
-        <article class = "pizzas" >
-            <p>Pizzas</p>
-            <form action="button" method="get">
-               <input type="button">
-            </form>
+        <article class = "pizzas">
+            <h4>Pizzas</h4>
             <%= image_tag "pizzas.png", class: "img-pizza" %>
             <%= image_tag "pizzas2.png", class: "img-pizza2" %>
         </article>
     </section>
+    <footer></footer>
 </html>
