--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -115,9 +115,7 @@
                     </div>
             </article>
         </section>
-        <footer>
-            
-        </footer>
+        <footer></footer>
     </main>
 </html>
 
