--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,6 +1,6 @@
 header h1 {
     border: 1px solid black;
-    background-color: yellow;
+    background-color: rgb(255, 247, 1);
     color: white;
     height: 100px;
     width: 100%;
@@ -9,20 +9,19 @@ header h1 {
 }
 
 .img-logo{
-    height: 100px;
-    width: 200px;
+    height: 50px;
+    width: 50px;
 }
 
 
 nav {
     border: 1px solid black;
-    height: 100px;
+    height: 50px;
     width: 300px;
 }
 
 section {
     .salchipapa{
-        border: 1px solid black;
         height: auto;
         width: 800px;
         display: flex;
@@ -43,7 +42,6 @@ section {
     }
 
     .hamburguesa{
-        border: 1px solid black;
         height: auto;
         width: 800px;
         display: flex;
@@ -60,7 +58,6 @@ section {
     }
 
     .pizzas{
-        border: 1px solid black;
         height: auto;
         width: 800px;
         display: flex;
@@ -85,7 +82,6 @@ section {
     }
       
         .item img {
-            width: 100%;
             display: block;
         }
         
