--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,3 +8,106 @@
  *
  * Consider organizing styles into separate files for maintainability.
  */
+
+ /*
+ *= require bootstrap.min
+ *= require_self
+ */
+body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+    margin: 0;
+    padding: 0;
+}
+
+.login{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    background-color: #fec104;
+}
+.login-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
+}
+.login-header img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-left: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border: 2px solid #f9f9f9;
+}
+.login-form{
+    display: flex;
+    flex-direction: column;
+    padding: 18px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    min-width: 400px;
+ }
+.login-form h2{
+    margin-bottom: 20px;
+}
+.login-form label{
+    font-size: 18px;
+    margin-bottom: 5px;
+    text-align: left;
+}
+
+.login-form input[type="email"],
+.login-form input[type="password"]{
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.login-form input[type="submit"]{
+    background-color: #007bff;
+    color: white;
+    border: none;
+    margin: 0 auto 15px auto;
+    padding: 7px 10px ;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.login-form input[type="submit"]:hover{
+    background-color: #0056b3;
+}
+.login-form a{
+    color: #007bff;
+    text-decoration: none;
+}
+.login-form a:hover{
+    text-decoration: underline;
+}
+.login-footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    gap: 5px;
+}
+.social{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+}
+
+.social img{
+    width: 30px;
+    height: 30px;
+    margin: 0 10px;
+}
