--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,44 +1,66 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :nombre %><br />
-    <%= f.text_field :nombre %>
+<section class="registro">
+  <div class="registro-header">
+    <h1>La Terraza del Pri</h1>
+    <%= image_tag "LogoTerrazaDelPri.svg" %>
   </div>
+  <div class="registro-form">
+    <h2>Regístrate</h2>
 
-  <div class="field">
-    <%= f.label :apellido %><br />
-    <%= f.text_field :apellido %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+
+      <div class="field">
+        <%= f.label :nombre %>
+        <%= f.text_field :nombre %>
+      </div>
+
+      <div class="field">
+        <%= f.label :apellido %>
+        <%= f.text_field :apellido %>
+      </div>
+
+      <div class="field">
+        <%= f.label :telefono %>
+        <%= f.text_field :telefono %>
+      </div>
+
+      <div class="field">
+        <%= f.label :email %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
+
+      <div class="field" id="psswrd">
+        <%= f.label :password , class: "psswrd" %>
+        <% if @minimum_password_length %>
+        <em>(minimo <%= @minimum_password_length %> caracteres)</em>
+        <% end %>
+        <%= f.password_field :password, autocomplete: "new-password" %>
+      </div>
+
+      <div class="field">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "Sign up" %>
+      </div>
+    <% end %>
+
+    <%= render "devise/shared/links" %>
   </div>
-
-  <div class="field">
-    <%= f.label :telefono %><br />
-    <%= f.text_field :telefono %>
+  <div class="registro-footer">
+  <div class="social">
+    <a href="https://www.instagram.com/laterrazadelpri?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+      <%= image_tag "icons/instagram-brands.svg" %>
+    </a>
+    <a href="https://wa.me/573113678033" target="_blank">
+      <%= image_tag "icons/whatsapp-brands.svg" %>
+    </a>
+    <a href="https://www.tiktok.com/@laterrazadelpri?is_from_webapp=1&sender_device=pc" target="_blank">
+      <%= image_tag "icons/tiktok-brands.svg" %>
+    </a>
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <p>© 2023 La Terraza del Pri. Todos los derechos reservados.</p>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</section>
