--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,15 +1,11 @@
+<%= render "devise/shared/error_messages", resource: resource %>
+
 <% if resource.errors.any? %>
-  <div id="error_explanation" data-turbo-cache="false">
-    <h2>
-      <%= I18n.t("errors.messages.not_saved",
-                 count: resource.errors.count,
-                 resource: resource.class.model_name.human.downcase)
-       %>
-    </h2>
-    <ul>
+  <script type="text/javascript">
+    document.addEventListener("turbo:load", function() {
       <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        alert("<%= j message %>");
       <% end %>
-    </ul>
-  </div>
+    });
+  </script>
 <% end %>
