--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,11 +1,14 @@
-<%= render "devise/shared/error_messages", resource: resource %>
-
 <% if resource.errors.any? %>
-  <script type="text/javascript">
-    document.addEventListener("turbo:load", function() {
+  <div id="error_explanation" class="alert alert-danger">
+    <h2>
+      <%= I18n.t("errors.messages.not_saved",
+                 count: resource.errors.count,
+                 resource: resource.class.model_name.human.downcase) %>
+    </h2>
+    <ol>
       <% resource.errors.full_messages.each do |message| %>
-        alert("<%= j message %>");
+        <li><%= message %></li>
       <% end %>
-    });
-  </script>
+    </ol>
+  </div>
 <% end %>
