--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,10 +10,11 @@
                 <input type="search" name="barra_busquedad">
             </form>
         </nav>
+        <p class="menu">Menu</p>
         <section>
                 <!--Esta es la salchipapa-->
             <article class="salchipapa">
-                <h4 class ="nombre-salchipapa" >Salchipapas</h4>
+                <h4 class ="nombre-salchipapa">Salchipapas</h4>
                 <div class = "item">
                     <%= image_tag "salchipapa.png", class: "img-salchipapa"%>
                     <div class="informacion" >
