--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,7 +1,7 @@
 header {
     display: flex;
-    justify-content: center; /* Centra horizontalmente */
-    align-items: center;     /* Centra verticalmente */
+    justify-content: center; 
+    align-items: center;     
     background-color: yellow;
     padding: 20px;
 }
@@ -26,6 +26,12 @@ nav {
     width: 300px;
 }
 
+.menu{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: xx-large;
+    
+}
+
 section {
     .salchipapa{
         height: auto;
@@ -34,7 +40,7 @@ section {
         gap: 40px;
 
         .nombre-salchipapa{
-            top: 10px;
+            margin-top: 20px;
         }
 
         .img-salchipapa{
@@ -63,6 +69,7 @@ section {
             height: 250px;
             width: 300px;
             max-width: 100%;
+            
         }
         .img-hamburguesa2{
             height: 250px;
@@ -95,6 +102,8 @@ section {
         width: 300px;
         border: 1px solid #ccc;
         overflow: hidden;
+        margin-right: 30px;
+        margin-bottom: 50px;
     }
         
         .item .informacion {
